welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:10: error: Boolean does not take parameters
	}else(a<b){
                  ^